test/Feature/Output/consecutive_divide_by_zero.c.tmp.klee-out/test000001.pc
array divisor1[4] : w32 -> w8 = symbolic
(query [(Eq 0
             (ReadLSB w32 0 divisor1))]
        false)
